--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,13 @@
+<!DOCTYPE html>
 <html>
 	<head>
-		<title>Hello World</title>
+		<title>Home Page</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-		<h1>Hello World</h1>
+		<div>
+			<h1>Hello World</h1>=
+		</div>
 	</body>
 </html>
